spring-boot-vuejs/frontend/kubernetes/ep.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: spring-boot-vuejs
  namespace: vuejs
subsets:
- addresses:
  # that's an address my pod is running on.
  - ip: 10.1.140.79
  ports:
  - name: http
    port: 8080
    protocol: TCP
